@@ -1,3 +1,8 @@
+2008-10-07  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/loop_optimization4.adb: New test.
+	* gnat.dg/loop_optimization4_pkg.ad[sb]: New helper.
+
 2008-10-06  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/unchecked_convert2.adb: New test.
